[package]
name = "solana_park"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_park"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.1", features = ["token-2022", "associated-token"] }
spl-associated-token-account = "1.1.1"
spl-token-metadata-interface = "0.7.0"
solana-program = "1.18.11"

[dev-dependencies]
anchor-client = "0.31.0"
solana-sdk = "1.18.11"

[profile.release]
opt-level = "z"
